# fetal-head-segmentation

./: .gitignore  README.md  pyproject.toml
data/: dataset.yaml
notebooks/: continue_domain_guided_training.ipynb  fetal_head_segmentation_yolo26.ipynb
src/: __init__.py  demo_experiments.py  demo_with_fetsam_loss.py  test_experiments.py
src/eda/: __init__.py  comprehensive_eda.py
src/model/: __init__.py  custom_models.py  fetsam_loss_integration.py  losses.py
src/notebook/: __init__.py  pipeline.py
src/postprocess/: __init__.py  comprehensive_evaluation.py  evaluate.py  tta.py
src/preprocess/: __init__.py  data_preprocessing.py  domain_guided_augmentation.py  offline_augmentation.py
src/train/: __init__.py  train.py
src/util/: __init__.py  constants.py
