[project]
name = "fetal-head-segmentation"
version = "0.1.0"
description = "Fetal Head Segmentation using YOLO26 for Instance Segmentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache 2.0"}
authors = [
    {name = "M. Fazri Nizar"}
]

dependencies = [
    "ultralytics @ git+https://github.com/mfazrinizar/ultralytics.git",
    "albumentations>=1.3.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "pycocotools>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
